--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,26 @@
 @font-face {
   font-family: V1;
-  src: url(./asset/font/UbuntuMono-Regular.ttf);
+  src: url(./asset/font/Lora-Regular.ttf);
 }
 
 body {
   font-family: V1 !important;
-}
-
-footer {
+  font-size: 1rem;
 }
 
 .MuiButton-root {
   font-family: V1 !important;
+}
+
+.MuiTypography-h3 {
+  text-transform: uppercase !important;
+  font-weight: bold !important;
+}
+
+.MuiTypography-h5 {
+  font-weight: bold !important;
+}
+
+.MuiTypography-root {
+  font-family: V1, Helvetica, Arial, sans-serif !important;
 }
